Fix navbar on mobile

--- a/client/src/components/navBar/navBar.css
+++ b/client/src/components/navBar/navBar.css
@@ -1,5 +1,4 @@
 .nav-bar {
-  position: relative;
   z-index: 99;
   width: 100%;
   height: 65px;
@@ -40,6 +39,7 @@
 /* Custom, iPhone Retina */ 
 @media only screen and (min-width: 320px) {
   .nav-bar {
+    position: absolute;
     border-bottom: 0;
     border-top: 1px solid #95989A;
   }
@@ -48,6 +48,7 @@
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   .nav-bar {
+    position: relative;
     border-top: 0;
     border-bottom: 1px solid #95989A;
   }
